--- a/src/index.css
+++ b/src/index.css
@@ -231,3 +231,15 @@ nav {
     display: none;
   } */
 }
+
+@media screen and (max-width: 1000px) and (min-width: 601px) {
+  .about .aboutImg {
+    display: none;
+  }
+  .projects-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
+  }
+}
